refactoring environment variables
